# groundfish

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
app/: __init__.py  config.py  logging.py  main.py
app/api/: deps.py  routes_health.py  routes_move.py  routes_uci.py  schemas.py
app/engine/: __init__.py  fen.py  manager.py  params.py  uci.py  worker.py
tests/: conftest.py  test_engine_integration.py  test_fen.py  test_params.py  test_routes_unit.py  test_uci.py
