[project]
name = "groundfish"
version = "0.1.0"
description = "A stateless HTTP service wrapping native Stockfish (NNUE) for chess move generation."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "chess>=1.11",
    "python-json-logger>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that spawn a real Stockfish process (deselect with '-m \"not integration\"')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
# B008: Depends(...) in argument defaults is the intended FastAPI dependency idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
